--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hafizkh.github.io/Github-User-Search",
   "name": "gitusersearch",
   "version": "0.1.0",
   "private": true,
@@ -6,15 +7,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "bootstrap": "^5.1.3",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
-    "react-router-dom": "^6.3.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,5 +44,4 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
-
 }
